--- a/adquira_ja/index.html
+++ b/adquira_ja/index.html
@@ -131,7 +131,7 @@
     </h1>
     
     <p class="text-xl md:text-2xl text-blue-100 max-w-3xl mx-auto mb-8 leading-relaxed">
-      Edifique sua casa, à deixe cheia de fé, conexão familiar e valores cristãos com nossa <strong>Coleção Completa!</strong>
+      Edifique sua casa e a deixe cheia de fé, conexão familiar e valores cristãos com nossa <strong>Coleção Completa!</strong>
     </p>
 
     <div class="bg-white/10 backdrop-blur-sm text-white rounded-2xl p-6 max-w-2xl mx-auto shadow-2xl mb-8">
@@ -279,9 +279,9 @@
                 <div class="text-left space-y-2 text-gray-700">
                   <p>🎨 <span class="highlight-pulse">Coleção Café com Deus Kids - devocional diário para edificar a sua família</span></p>
                   <p>✨ Coleção Aprendendo a Orar - explore o poder da oração diária no seu lar! </p>
-                  <p>🌟 Coleção Tesouros do Coração - ensine sobre sentimentos com base na bíblia!</p>
+                  <p>🌟 Coleção Tesouros do Coração - ensine sobre sentimentos com base na Bíblia!</p>
                   <p>🌍 Coleção Imaginando Juntos - solte a imaginação com seus filhos!</p>
-                  <p>🎄 Coleção Histórias de Natal - ensine o verdadeiro espirito do natal.</p>
+                  <p>🎄 Coleção Histórias de Natal - ensine o verdadeiro espírito do Natal.</p>
                   <p class="text-sm text-purple-600 font-bold pt-2 border-t">+ Novas histórias adicionadas periódicamente!</p>
                 </div>
               </div>
@@ -340,7 +340,7 @@
                 <div class="text-7xl mb-4">🎨</div>
                 <h3 class="font-serif text-2xl font-bold text-brand-blue mb-3">Atividades Incluídas:</h3>
                 <div class="text-left space-y-2 text-gray-700">
-                  <p>📚 Bíblia em Cores - Bobbie Goods sobre cada livro da bíblia.</p>
+                  <p>📚 Bíblia em Cores - Bobbie Goods sobre cada livro da Bíblia.</p>
                   <p>✏️ Atividades de Aprendizado</p>
                   <p>🖍️ Livros para Colorir</p>
                   <p>🧩 Jogos Educativos</p>
@@ -418,7 +418,7 @@
     <!-- Texto complementar -->
     <div class="text-center mt-8 bg-gradient-to-r from-green-50 to-blue-50 rounded-xl p-6 max-w-4xl mx-auto border-2 border-green-200">
       <p class="text-brand-blue font-bold text-xl mb-2">✨ E muito mais conteúdo!</p>
-      <p class="text-gray-700">Acesso completo a toda coleção de histórias e ilustrações bíblicas + atualizações mensais gratuitas</p>
+      <p class="text-gray-700">Acesso completo a toda a coleção de histórias e ilustrações bíblicas + atualizações mensais gratuitas</p>
     </div>
   </section>
 
