--- a/adquira_ja/index.html
+++ b/adquira_ja/index.html
@@ -127,7 +127,7 @@
     </div>
     
     <h1 class="font-serif text-4xl md:text-6xl lg:text-7xl font-bold mb-6 leading-tight">
-      Que tal <br> <span class="text-brand-gold italic">Transformar!</span> <br> a rotina do seu lar?
+      Que tal <br> <span class="text-brand-gold italic">Transformar</span> <br> a rotina do seu lar?
     </h1>
     
     <p class="text-xl md:text-2xl text-blue-100 max-w-3xl mx-auto mb-8 leading-relaxed">
@@ -135,8 +135,7 @@
     </p>
 
     <div class="bg-white/10 backdrop-blur-sm text-white rounded-2xl p-6 max-w-2xl mx-auto shadow-2xl mb-8">
-      <p class="text-lg md:text-xl font-semibold mb-2">✨ Descubra Como Transformar Seu Lar</p>
-      <p class="text-sm md:text-base text-blue-100">Conheça todos os benefícios da nossa coleção completa de histórias e atividades bíblicas</p>
+      <p class="text-lg md:text-xl font-semibold mb-2">✨ Descubra como nós podemos te ajudar nessa jornada.</p>
     </div>
   </div>
 </header>
